Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#9287 closed bug (fixed)

Installer window disappears

Reported by: dknoto Owned by: korli
Priority: normal Milestone: R1
Component: Applications/Installer Version: R1/Development
Keywords: shotrcuts Cc:
Blocked By: Blocking:
Platform: All

Description

Hi, Today I tested the installation hrev45000-x86-gcc4 in VirtualBox 4.2.4. After starting the installation window installer disappeared forever when I hit CTRL + ALT + V (down arrow). ALT == Left ALT on PC keyboard.

Change History (18)

comment:1 by diver, 12 years ago

http://www.haiku-os.org/docs/userguide/en/keyboard-shortcuts.html CTRL ALT ← / → / ↑ / ↓ Navigates spatially the rows/columns of the available workspaces. Add SHIFT to take the active window with you.

comment:2 by dknoto, 12 years ago

I know shotcuts :(

Don't navigate but only HIDE!

comment:3 by diver, 12 years ago

Probably Installer should be visible on all workspaces, see #8003.

comment:4 by mmadia, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev45122

comment:5 by axeld, 12 years ago

Since the Installer is usable as a stand-alone application as well, I'm not really satisfied with this solution. Maybe only open it on all workspaces if Tracker is not running?

comment:6 by dknoto, 12 years ago

Resolution: fixed
Status: closedreopened

This solution is weak, the installer window has separate position on all workspaces. I think the best solution is reduce number of workspaces to ONE!

comment:7 by axeld, 12 years ago

dknoto: please don't reopen tickets yourself. Instead, argue why it should be reopened.

I don't agree with your opinion, in any case. Reducing the number of workspaces would also affect normal boot. And what's the problem with the Installer having different window positions? Besides that this is the default behavior, it's not that workspaces are such a strange thing that they should be hidden. If you actually manage to accidentally switch the workspace, there is nothing wrong to educate you of what just might have happened.

comment:8 by dknoto, 12 years ago

dknoto: please don't reopen tickets yourself. Instead, argue why it should be reopened.

OK. Is the design issue is reason enough?

I don't agree with your opinion, in any case. Reducing the number of workspaces would also affect normal boot.

At which point? On desktop we have one window without any information about of four workspaces.

This pseudo-code should work without problems:

N = GetWorkspaces; SetWorkspaces(1); Install; SetWorkspaces(N);

And what's the problem with the Installer having different window positions?

Installer window jumps when move from one workspace to another. This is bug.

Besides that this is the default behavior, it's not that workspaces are such a strange thing that they should be hidden. If you actually manage to accidentally switch the workspace, there is nothing wrong to educate you of what just might have happened.

Sorry, but this is bad practice, especially for new users.

in reply to:  8 ; comment:9 by anevilyak, 12 years ago

Replying to dknoto:

OK. Is the design issue is reason enough?

Since it's only an issue in your opinion, no. You're welcome to try to convince us otherwise though.

This pseudo-code should work without problems:

N = GetWorkspaces; SetWorkspaces(1); Install; SetWorkspaces(N);

Except it doesn't, since Installer can be invoked as an app at any time later (and from any workspace), and would result in extremely annoying behavior in those cases.

Installer window jumps when move from one workspace to another. This is bug.

No, it isn't. That's been an integral feature of windows + workspaces going to the BeOS days. "I don't like it." != "It's a bug." It's in fact quite handy in many cases.

I might further note, if you actually want to convince anyone to change things, you might consider adopting a less adversarial conversation style, your responses to date do nothing to motivate anyone to change things.

comment:10 by anevilyak, 12 years ago

Resolution: fixed
Status: reopenedclosed

comment:11 by humdinger, 12 years ago

I don't think dknoto was particularly adversial. Please always remember that English isn't the mother tongue for everyone. Sometimes that may appear snippy.

Anyway, it's good that it has been pointed out that there may be a problem with accidental workspacing. Esp. when there's no Deskbar around. I'm not sure the current solution to show on all workspaces is ideal though. It may be a bit annoying when using Installer from your working Haiku installation. I often try out a new build by using Installer to put an image onto another partition. While Installer is churning along, I keep goofing off on another workspace. Now I'd have the installer window around everywhere...

I can hide the window, but coming to think of that, the option to minimize Installer should be disabled also in the typical install situation, i.e. when Deskbar isn't running...

in reply to:  11 comment:12 by mmadia, 12 years ago

Replying to axeld:

Since the Installer is usable as a stand-alone application as well, I'm not really satisfied with this solution. Maybe only open it on all workspaces if Tracker is not running?

Done in hrev45123.

Replying to humdinger:

the option to minimize Installer should be disabled also in the typical install situation, i.e. when Deskbar isn't running...

I'll wait for some more feedback from other contributors before tinkering with that. (Maybe that deserves its own ticket?)

comment:13 by axeld, 12 years ago

Thanks, Matt!

To humdinger: the Installer window is already not minimizable - I don't think this is much of an issue, though, or is it?

To dknoto: workspaces can have different resolutions, so the ability to have windows on different positions in different workspaces is absolutely vital to the feature.

in reply to:  13 comment:14 by humdinger, 12 years ago

Replying to axeld:

To humdinger: the Installer window is already not minimizable - I don't think this is much of an issue, though, or is it?

Currently only the "EULA" window isn't hidable, the Installer itself still is. Someone could double-click the tab and never gets it back. Deskbar isn't running, Twitcher therefore not available either.

in reply to:  11 comment:15 by dknoto, 12 years ago

Replying to humdinger:

I don't think dknoto was particularly adversial. Please always remember that English isn't the mother tongue for everyone. Sometimes that may appear snippy.

English is not my native language. I did not think that the nuances of the language will be a problem in the understanding of basic design flaws:

  • If something is going to work in the future, before the full launch should not affect the current status of the system and this should not mislead the user.

In this situation you can reduce workspaces, this is easy, or keep the same position of Installer window on all workspaces.

in reply to:  9 ; comment:16 by dknoto, 12 years ago

Replying to anevilyak:

Installer window jumps when move from one workspace to another. This is bug.

No, it isn't. That's been an integral feature of windows + workspaces going to the BeOS days. "I don't like it." != "It's a bug." It's in fact quite handy in many cases.

I like it in normal state of system. I understand this situation but this behavior while installing system is confusing for new users and also for me.

in reply to:  16 comment:17 by axeld, 12 years ago

Replying to dknoto:

I like it in normal state of system. I understand this situation but this behavior while installing system is confusing for new users and also for me.

I think it's highly unlikely that anyone will accidentally switch workspaces during install - further fancier more complicated solutions are just a waste of time IMO. If that happens, the current solution is surely good enough. And as I said, it gives you a hint of what just happened, so that user even has the chance to learn something.

In any case, though, hiding the Installer window should also not be allowed.

comment:18 by axeld, 12 years ago

BTW the first time you switch to a new workspace, the position should not be altered, anyway.

Note: See TracTickets for help on using tickets.