Make the EULA and Installer appear on all workspaces.

Fixes #9287